# kana.c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  xmake.lua
core/: config.h  gc.c  gc.h  kana.c  kana.h  kon.c  kon.h  node.c  node.h  xmake.lua
core/box/: box.h  nunbox.h  nunbox_char.h  nunbox_short_str.h
core/container/: container.h  kn_hashtable.c  kn_hashtable.h  kn_list.c  kn_list.h  kn_vector.c  kn_vector.h  kx_hashtable.c  kx_hashtable.h  kx_list.c  kx_list.h  kx_vector.c  kx_vector.h
core/gc/: gc.c  gc.h  kikumaru.c  kikumaru.h  prefix.h  tina.c  tina.h
core/interp/: apply.h  cps_treewalk.c  cps_treewalk.h  env.c  env.h  eval.h  interp.h  op_handlers.c  op_handlers.h  opcodes.h  prefix.h  primary.c  primary.h  vm.c  vm.h
core/interpreter/: cps_interpreter.c  cps_interpreter.h  env.c  primary.c  primary.h  types.h
core/interpreter/keyword/: prefix.h  prefix_and.c  prefix_apply.c  prefix_apply.h  prefix_blk.c  prefix_blk.h  prefix_break.c  prefix_callcc.h  prefix_cond.c  prefix_cond.h  prefix_continue.c  prefix_continue.h  prefix_def_builder.c  prefix_def_builder.h  prefix_def_dispatcher.c  prefix_do.c  prefix_do.h  prefix_eval.c  prefix_eval.h  prefix_for.c  prefix_func.c  prefix_func.h  prefix_if.c  prefix_lambda.c  prefix_let.c  prefix_macro_func.c  prefix_macro_func.h  prefix_macro_lambda.c  prefix_macro_lambda.h  prefix_or.c  prefix_or.h  prefix_set.c  prefix_set_dispatcher.c  prefix_set_dispatcher.h  prefix_sh.c  prefix_sh.h
core/kon/: kon.h  prefix.h  reader.c  reader.h  state_stack.h  tokenizer.c  tokenizer.h  value.c  value.h  value_builder.c  value_builder.h  writer.c  writer.h
core/kson/: kson.h  prefix.h  reader.c  reader.h  state_stack.c  state_stack.h  tokenizer.c  tokenizer.h  value_builder.c  value_builder.h  writer.h
core/module/: kmod_accessor.c  kmod_accessor.h  kmod_cell.c  kmod_cell.h  kmod_file.c  kmod_file.h  kmod_list.c  kmod_list.h  kmod_map.c  kmod_map.h  kmod_number.c  kmod_number.h  kmod_regex.c  kmod_regex.h  kmod_string.c  kmod_string.h  kmod_table.c  kmod_table.h  kmod_vector.c  kmod_vector.h  kn_regex.c  kn_regex.h  kon_accessor.c  kon_accessor.h  kon_cell.c  kon_cell.h  kon_file.c  kon_file.h  kon_list.c  kon_list.h  kon_map.c  kon_map.h  kon_module.c  kon_module.h  kon_number.c  kon_number.h  kon_string.c  kon_string.h  kon_table.c  kon_table.h  (+5 more)
core/prefix/: config.h  log.h  prefix.h  type.h
core/string/: kn_stringbuffer.c  kn_stringbuffer.h  kn_stringview.h  kx_stringbuffer.c  kx_stringbuffer.h  kx_stringview.h  string.h  utf8.h
core/utils/: number_utils.c  prefix.h  realpath.c  utils.h
examples/knative/: accessor.kl  and.kl  apply.kl  blk.kl  callcc.kl  cond.kl  do.kl  eval.kl  file.kl  for-loop-accessor.kl  for-loop-list.kl  for.kl  func.kl  hello.kl  if.kl  lambda.kl  letset.kl  macro.kl  map.kl  math.kl  mk-dispatcher.kl  or.kl  pipe.kl  proto-obj.kl  quasi_unquote.kl  regex.kl  return-from-blk.kl  return-from-func.kl  return-from-lambda.kl  return-from-root.kl  sh.kl  string.kl  symbol.kl  writeln.kl
examples/kon/: array.kon  cell.kl  cell.kon  map.kon  script.kon  table.kon  vec-in-cell.kon
examples/sicp/: fib-rec.kl
examples/token/: instant.kon  instant2.kon
exec/: commander.c  kni.c  main.c  xmake.lua
lib/: xmake.lua
lib/sregex/: xmake.lua
lib/tbox/: tbox.c  tbox.config.h  tbox.config.h.in
samples/knative/: and.kl  apply.kl  attr-slot.kl  blk.kl  callcc.kl  cond.kl  do.kl  eval.kl  for-loop-accessor.kl  for-loop-list.kl  for.kl  func.kl  if.kl  lambda.kl  letset.kl  math.kl  mk-dispatcher.kl  or.kl  pipe.kl  proto-obj.kl  return-from-blk.kl  return-from-func.kl  return-from-lambda.kl  return-from-root.kl  sh.kl  symbol.kl  writeln.kl
samples/kon/: array.kon  cell.kon  list.kon
samples/kon/native/: blk.kl  cond.kon  do.kl  func.kon  if.kl  letset.kl  math.kon  or.kon  writeln.kon
samples/sicp/: fib-rec.kl  symbol.kl
src/: xmake.lua
src/kli/: commander.h  main.c  xmake.lua
src/kon/: config.h  gc.c  gc.h  kon.c  kon.h  prefix.h  xmake.lua
src/kon/container/: kx_hashtable.c  kx_hashtable.h  kx_list.c  kx_list.h  kx_vector.c  kx_vector.h
src/kon/container/hashtable/: kon_hashtable.c  kon_hashtable.h  kx_hashtable.c  kx_hashtable.h
src/kon/container/vector/: kx_vector.c  kx_vector.h
src/kon/interpreter/: cps_interpreter.c  cps_interpreter.h  env.c  env.h  primary.c  primary.h  types.h
src/kon/interpreter/keyword/: prefix.h  prefix_and.c  prefix_and.h  prefix_apply.c  prefix_apply.h  prefix_blk.c  prefix_blk.h  prefix_break.c  prefix_break.h  prefix_callcc.c  prefix_callcc.h  prefix_cond.c  prefix_cond.h  prefix_continue.c  prefix_continue.h  prefix_def_builder.c  prefix_def_builder.h  prefix_def_dispatcher.c  prefix_def_dispatcher.h  prefix_do.c  prefix_do.h  prefix_eval.c  prefix_eval.h  prefix_for.c  prefix_for.h  prefix_func.c  prefix_func.h  prefix_if.c  prefix_if.h  prefix_lambda.c  prefix_lambda.h  prefix_let.c  prefix_let.h  prefix_or.c  prefix_or.h  prefix_set.c  prefix_set.h  prefix_set_dispatcher.c  prefix_set_dispatcher.h  prefix_sh.c  (+1 more)
src/kon/interpreter/mod/: kon_accessor.c  kon_accessor.h  kon_cell.c  kon_cell.h  kon_list.c  kon_list.h  kon_module.c  kon_module.h  kon_number.c  kon_number.h  kon_string.c  kon_string.h  kon_table.c  (+3 more)
src/kon/kson/: hashmap.c  hashmap.h  kson.h  murmurhash.c  murmurhash.h  node.c  node.h  prefix.h  reader.c  reader.h  state_stack.c  state_stack.h  tokenizer.c  tokenizer.h  value_builder.c  value_builder.h  writer.h
src/kon/prefix/: config.h  log.h  prefix.h  type.h
src/kon/string/: kon_stringbuffer.c  kon_stringbuffer.h  kon_stringview.h  kx_stringbuffer.c  kx_stringbuffer.h  utf8.h
src/kon/utils/: number_utils.h  realpath.c  realpath.h
src/koni/: main.c  xmake.lua
src/playground/: datatypes.cpp  eval_file.c  xmake.lua
src/playground/kson/: reader.c  tokenizer.c  writer.c
test/: xmake.lua
test/container/: test_hashtable.c  test_hashtable_iter.c  test_list.c  test_table.c
test/klang/: test_eval.c  testeval.c
test/kson/: test_reader.c  test_tokenizer.c  testreader.c
test/string/: test_string.c
